2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/33_comp_deux_type_diff.deca
// Description :
//      comparasion entre deux types diff : string et boolean  
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération >= n'est pas possible entre 'boolean' et 'string'
//
// Historique :
// cree le 10/01/2024

{
    true >= "bonjour";
}